# nes.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build-wasm.sh  justfile  log.txt  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
emu/: Cargo.toml
emu-wasm/: Cargo.toml
emu-wasm/src/: lib.rs
emu/src/: audio_sample_buffer.rs  cartridge.rs  consts.rs  input.rs  lib.rs  nes.rs  palette.rs  save.rs
emu/src/apu/: channels.rs  components.rs  mod.rs
emu/src/cpu/: instructions.rs  mod.rs
emu/src/mappers/: mapper0.rs  mapper1.rs  mapper3.rs  mapper4.rs  mapper9.rs  mod.rs
emu/src/ppu/: mod.rs  pattern_table.rs  shift_register.rs  sprite.rs
src/: audio_output.rs  bus.rs  cpu.rs  emu_state.rs  extension_traits.rs  instructions.rs  main.rs  renderer.rs  ui.rs
src/emu/: bit_ext.rs  bits.rs  bus.rs  cartridge.rs  consts.rs  controller.rs  cpu.rs  input.rs  instructions.rs  mapper.rs  mod.rs  nes.rs  palette.rs  ppu.rs  save.rs  save_state.rs
src/emu/apu/: channels.rs  components.rs  mod.rs
src/emu/cpu/: instructions.rs  mod.rs
src/emu/mappers/: mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper9.rs  mod.rs
src/emu/ppu/: flags.rs  mod.rs  pattern_table.rs  shift_register.rs  sprite.rs  vram_addr.rs
src/utils/: fps_counter.rs  mod.rs
web/: index.html  package.json  pnpm-lock.yaml  style.css  vite.config.ts
web/src/: audio.ts  bootstrap.ts  input.ts  main.ts  renderer.ts  ring-buffer.ts  ringbuf.d.ts
