[package]
name = "emu-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
emu = {path = "../emu"}
wasm-bindgen = "0.2.93"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = "0.3.70"
bytemuck = "1.17.0"
