[package]
name = "emu"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
anyhow = "1.0.80"
bincode = {version = "2.0.0-rc.3", features = ["serde"] }
bitflags = { version = "2.4.2", features = ["serde"] }
dirs = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
modular-bitfield = "0.11.2"
num-integer = "0.1.46"
num-traits = "0.2.19"
serde = { version = "1.0.207", features = ["derive"] }
serde-big-array = "0.5.1"
strum_macros = "0.26.1"


